--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   text-align: center;
   letter-spacing: 0.15em;
   font-size: 22px;
-  padding: 0 45px;
+  padding: 50px 95px;
 }
 
 .slider {
@@ -110,4 +110,11 @@ body {
 
 .dot.active {
   background: #FFCF47;
+}
+
+
+@media only screen and (max-width: 48em) {
+  body {
+    padding: 50px 3rem;
+  }
 }
